# shguard

./: .gitleaks.toml  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  lefthook.yml  plan.md
.github/workflows/: ci.yml  release.yml
docs/: distribution.md  e2e.md
docs/adr/: 0001-parser-crate.md
docs/spike/parser-compare/: Cargo.toml
docs/spike/parser-compare/src/: main.rs
rules/: allowlist.toml  blocklist.toml
scripts/: smoke.sh
src/: adapter.rs  ast.rs  config.rs  gate.rs  lib.rs  normalize.rs  parser.rs  rules.rs  verdict.rs
tests/: benign_corpus.rs  guardfall.rs  hook_io.rs  user_config.rs
